compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__unlabelled_after_labelled_with_type.snap
---
source: compiler-core/src/type_/tests/functions.rs
assertion_line: 16
expression: "fn main(wibble wibber, wobber: Int) {\n  Nil\n}"
---
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.gleam:1:24
  │
1 │ fn main(wibble wibber, wobber: Int) {
  │                        ^^^^^^^^^^^

All unlabelled arguments must come before any labelled arguments.

